[package]
name = "gouth"
version = "0.1.0"
authors = ["mechiru <u9053u6d41@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gcemeta = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
attohttpc = { version = "0.13", default-features = false, features = ["compress", "tls-rustls", "form"] }
url = { version = "2.1.1" }
jsonwebtoken = { version = "7" }
