[package]
name = "gouth"
version = "0.1.2"
authors = ["mechiru <u9053u6d41@gmail.com>"]
edition = "2018"
license = "MIT"
description = "This library provides auto-renewed tokens for GCP service authentication."
repository = "https://github.com/mechiru/gouth"
documentation = "https://docs.rs/gouth"
categories = ["authentication"]
keywords = ["google", "cloud", "auth", "gcloud", "gcp"]
readme = "./../README.md"

[dependencies]
gcemeta = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
attohttpc = { version = "0.15", default-features = false, features = ["compress", "tls-rustls", "form"] }
url = { version = "2.1" }
jsonwebtoken = { version = "7" }

[dev-dependencies]
lazy_static = "1.4"
rouille = "3.0"
